Fixes text overflow inside of buttons

--- a/src/Button/Button.css
+++ b/src/Button/Button.css
@@ -2,7 +2,8 @@
   color: #293264;
   padding: 0 10px;
   min-width: 100px;
-  min-height: 25px;
+  min-height: 50px;
+  height: auto;
   font-size: 11px;
-  margin-right: 20px;
+  /* margin-right: 20px; */
 }
