--- a/src/Question/Question.css
+++ b/src/Question/Question.css
@@ -1,5 +1,5 @@
 .container {
-  border: 2px dotted blue;
+  /* border: 2px dotted blue; */
   width: 50%;
   height: 150px;
   margin: 10px 0;
@@ -15,7 +15,7 @@
 
 .answers {
   display: flex;
-  /* justify-content: space-around; */
+  justify-content: space-around;
   width: 100%;
   /* border: 2px solid red; */
 }
